--- a/test.yaml
+++ b/test.yaml
@@ -2,7 +2,7 @@ swagger: '2.0'
 info:
   version: 1.0.0
   title: XSS Test
-  description: '<script>alert("XSS")</script>'
+  description: '<img src=x onerror=alert("XSS")>'
 paths:
   /:
     get:
