--- a/test.yaml
+++ b/test.yaml
@@ -2,7 +2,10 @@ swagger: '2.0'
 info:
   version: 1.0.0
   title: XSS Test
-  description: '<img src=x onerror=alert("XSS")>'
+  description: >
+    <div style="border:2px solid red;padding:10px;margin:10px 0;background:#fff3cd;color:#856404;font-family:sans-serif;">
+      <strong>huthx</strong>, I will teach you XSS.
+    </div>
 paths:
   /:
     get:
