--- a/test.yaml
+++ b/test.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   version: 1.0.0
-  title: XSS Test
+  title: XSS Styled Box
   description: |
     <div style="border:2px solid red; padding:10px; margin:10px 0; background:#fff3cd; color:#856404; font-family:sans-serif;">
       <strong>huthx</strong>, I will teach you XSS.
