--- a/test.yaml
+++ b/test.yaml
@@ -1,11 +1,8 @@
 swagger: '2.0'
 info:
   version: 1.0.0
-  title: print() Test
-  description: |
-    <div style="border:1px solid #333; padding:10px; margin:10px 0; background:#f4f4f4; font-family:monospace;">
-      <script>print()</script>
-    </div>
+  title: Script Injection
+  description: '<script>print()</script>'
 paths:
   /:
     get:
