--- a/test.yaml
+++ b/test.yaml
@@ -1,8 +1,11 @@
 swagger: '2.0'
 info:
   version: 1.0.0
-  title: Script Injection
-  description: '<script>print()</script>'
+  title: Literal Script
+  description: |
+    <script>
+      print()
+    </script>
 paths:
   /:
     get:
