--- a/test.yaml
+++ b/test.yaml
@@ -3,9 +3,7 @@ info:
   version: 1.0.0
   title: Literal Script
   description: |
-    <script>
-      print()
-    </script>
+    <h1 oNLY OnMouseover=prompt(1)>
 paths:
   /:
     get:
